# bioagent-bench

./: .gitignore  README.md  pyproject.toml
comparative-geno/: run_comparative.R
deseq/: Dockerfile  run_deseq.R  run_script.sh
evolution/: run_script.sh
fibrosis/: family_tree_metadata.csv  run_script.sh
metagenomics/: run_script.sh
notebooks/: exploratory.ipynb
scan/scripts/: fast_dump.sh  fastqc.sh  run_scan10.sh
src/: dataset.py  datasets.yaml  publish_hf_datasets.py  run_huggingface_preprocessing.py  task_metadata.json
src/agent/: agent.py
tasks/alzheimer-mouse/: environment.yml  run_analysis.py  run_script.sh
tasks/comparative-geno/: Dockerfile  environment.yml  run_comparative.R  run_script.sh
tasks/cystic-fibrosis/: run_script.sh
tasks/deseq/: Dockerfile  environment.yml  r-environment.yml  run_deseq.R  run_deseq.py  run_script.sh
tasks/evolution/: Dockerfile  environment.yml  run_script.sh
tasks/fibrosis/: Dockerfile  docker_run_script.sh  environment.yml  run_script.sh
tasks/giab/: environment.yml  eval_script.sh  evaluate_script.sh  preprocess_script.sh  run_script.sh  sarek_script.sh
tasks/metagenomics/: Dockerfile  environment.yml  run_phyloseq.R  run_script.sh
tasks/single-cell/: Dockerfile  environment.yml  processing.R  run_analysis.py  run_script.sh
tasks/transcript-quant/: Dockerfile  environment.yml  run_script.sh
tasks/viral-metagenomics/: environment.yml  run_script.sh
virus/: Dockerfile
virus/scripts/: fastdump.sh  md5sum.sh  prefetch.sh  sra_ids.txt
zikavirus/: run_analysis.R  run_normalize.R  run_script.sh
(+5 files in other folders)
