[project]
name = "bio-agent-benchmark"
version = "0.1.0"
description = "Tasks for benchmarking agentic LLMs in bioinformatics tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.4",
    "pandas>=2.2.3",
    "datasets>=2.19.0",
    "pyarrow>=17.0.0",
]
